--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
-annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=ForecastDiagnostics
+application.vendor=uli
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,16 +24,19 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/ForecastDiagnostics.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.commons-io-2.0.1.jar=lib/commons-io-2.0.1.jar
 file.reference.commons-net-2.2.jar=lib/commons-net-2.2.jar
+file.reference.guava-r08-gwt.jar=../../../../ram/guava-r08/guava-r08-gwt.jar
 file.reference.guava-r08.jar=lib/guava-r08.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.commons-io-2.0.1.jar}:\
     ${file.reference.commons-net-2.2.jar}:\
-    ${file.reference.guava-r08.jar}
+    ${file.reference.guava-r08.jar}:\
+    ${file.reference.guava-r08-gwt.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
